# my-kobo

./: .gitignore  Cargo.toml  Makefile  update-from-code.sh
koboSync/: go.mod  program.go
sdcard/mnt/onboard/.adds/majcn/: kobo_github_sync  translate_google  translate_googlefree  translate_termania  wait_for_wifi_up.sh
sdcard/mnt/onboard/.adds/nm/: config  config.txt
src/: common.rs
toolchain/: kobo-cross-armhf.dockerfile
translate/: go.mod  go.sum  program.go
translate/googletranslate/: translategoogle.go
translate/googletranslatefree/: translategooglefree.go
translate/termania/: termania.go
translate/types/: types.go
