[package]
name = "my-kobo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.1"
scraper = "0.18.1"
serde = { version="1.0.195", features = ["derive"] }
textwrap = "0.16"
ureq = { version="2.9.1", features = ["json"] }
zip = "0.6.6"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1