[package]
name = "my-kobo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.2"
scraper = "0.19.0"
serde = { version="1.0.198", features = ["derive"] }
textwrap = "0.16.1"
ureq = { version="2.9.6", features = ["json"] }
zip = "1.1.1"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1